--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
         </h2>
         Author: {{post.author}}<br/>
 
-        {% if post.thumbnail %}
+        {% if post.thumbnail != '' %}
         <img src="{{ post.thumbnail | prepend: site.image_url}}"/>
         {% endif %}
         {{ post.content | truncatewords : 100}}<br/>
