new posts and test stuff

--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 ---
 layout: default
 ---
-
+<script type="application/ld+json">
+{ "@context": "http://schema.org",
+ "@type": "Blog",
+ "keywords": "software engineering sailing getoutside php",
+ "url": "https://www.henryayres.co.uk",
+ "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://www.henryayres.co.uk"
+  },
+ "author": {
+    "@type": "Person",
+    "name": "Henry Ayres",
+    "sameAs": [
+        "https://twitter.com/hayres",
+        "https://github.com/hayres",
+        "https://uk.linkedin.com/in/henryayres"
+    ]
+  }
+ }
+</script>
 <div class="home">
 
   <h1 class="page-heading">Posts</h1>
